# ai_movie_agent

./: .env  .env.example  .gitignore  MIGRATION.md  README.md  langgraph.json  main.py  pyproject.toml  requirements.txt  test_movie.py
src/: __init__.py
src/agents/: __init__.py  movie_agent.py
src/config/: __init__.py  settings.py
src/models/: __init__.py  state_models.py
src/tools/: __init__.py  search_tools.py
tests/: test_agent.py
